--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ NEXT_PUBLIC_STRIPE_PUBLISH_KEY=
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
+DATABASE_URL=postgresql://ensign_owner:nH20uQUrzSJL@ep-tight-fire-a5ls0r8u.us-east-2.aws.neon.tech/ensign?sslmode=require
 
 CLOUDWAYS_POSTS_URL=
 CLOUDWAYS_FEATURED_IMAGES_URL=
